--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "jbdev/external-order-id",
-    "description": " External Order Id",
+    "description": "External Order Id",
     "require": {
         "php": "~5.5.0|~5.6.0|~7.0.0"
     },
@@ -20,5 +20,10 @@
         "psr-4": {
             "JBdev\\ExternalOrderId\\": ""
         }
+    },
+    "source": {
+      "url": "git://github.com/yankers88/external-order-id.git",
+      "type": "git",
+      "reference": "master"
     }
 }
