--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,10 @@
 {
     "name": "jbdev/external-order-id",
     "description": "External Order Id",
-    "require": {
-        "php": "~5.5.0|~5.6.0|~7.0.0"
-    },
+    "require": {},
+    "suggest": {},
     "type": "magento2-module",
     "version": "1.0.1",
-    "authors": [
-        {
-            "name": "JBdev",
-            "email": "jan.biesiada.88@gmail.com",
-            "role": "Developer"
-        }
-    ],
     "autoload": {
         "files": [
             "registration.php"
